<resources>
    <string name="app_name">CrashRoads</string>
    <string name="title_home">Profile</string>
    <string name="title_dashboard">Map</string>
    <string name="title_notifications">Settings</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_google_sign_in">Sign in with Google</string>
    <string name="action_registration">Sign up</string>

    <string name="registration_sign_up_button">Sign Up</string>
    <string name="welcome_message">Welcome to Crash Roads</string>
    <string name="welcome_caption_message">Sign in to continue</string>
    <string name="sign_in_as_guest_text_view">Guest</string>

    <!-- String related to registration-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_driving_exp">Driving experience</string>
    <string name="prompt_birthday_date">Birthday date</string>
    <string name="profile_email_caption">Email:</string>
    <string name="profile_location_caption">Location:</string>
    <string name="profile_age_caption">Age:</string>
    <string name="profile_exp_caption">Driving experience:</string>
    <string name="profile_edit_button_caption">Edit</string>
    <string name="profile_edit_cancel_button_caption">Cancel</string>
    <string name="profile_edit_ave_button_caption">Save</string>


    <!--Strings for ratig dialog-->
    <string name="rating_header">Rate selected road</string>
    <string name="update_rating">Update</string>
    <string name="bad_quality">terrible</string>
    <string name="low_quality">low</string>
    <string name="middle_quality">midle</string>
    <string name="high_quality">high</string>
    <string name="good_quality">perfect</string>

    <!--Strings for map fragment-->
    <string name="google_maps_web_services_key">AIzaSyCoBhi-d2AInViMMyZXdpJOtkpAbPNyP_4</string>

</resources>
